chore) Fix alignment of task object

--- a/app/client/src/static/index.css
+++ b/app/client/src/static/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.task-list-container {
+  text-align: center;
+}
+
+.task-item {
+  list-style-type: none;
+  display: inline-flex;
+}
